tests/parser/extra_tokens.nx
fun main() {
    4 + 5 ()
}

